# my-anns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run_multiple_scal.sh  run_scal_test.sh
scripts/: deep.py  download_dataset.py  fbin_test.py  format-cpp.sh  glove.py  msong.py  sift.py  sift100k.py  sift1m.py  sift_download.py  sift_duplicate.py  sift_preprocess.py  sift_test.py  test.py  vecs_util.py
src/: CMakeLists.txt  bitset.cpp  dataset.cpp  dataset_test.cpp  dhnsw.cpp  dtype.cpp  evaluator.cpp  fgim.cpp  fgim_test.cpp  graph.cpp  hnsw.cpp  hnsw_test.cpp  index.cpp  kmeans.cpp  kmeans_test.cpp  logger.cpp  logger_test.cpp  memory.cpp  mgraph.cpp  mgraph_test.cpp  nndescent.cpp  nnmerge.cpp  nnmerge_test.cpp  nsg.cpp  nsg_test.cpp  nsw.cpp  nsw_test.cpp  output.cpp  output_test.cpp  scal_test.cpp  shnsw.cpp  taumng.cpp  timer.cpp  utils.cpp  vamana.cpp  vamana_test.cpp  visittable.cpp
src/include/: annslib.h  bitset.h  dataset.h  dhnsw.h  dtype.h  evaluator.h  fgim.h  file.h  graph.h  hnsw.h  index.h  kmeans.h  logger.h  memory.h  metric.h  mgraph.h  nndescent.h  nnmerge.h  nsg.h  nsw.h  output.h  shnsw.h  taumng.h  timer.h  typing.h  utils.h  vamana.h  visittable.h
src/include/hnsw/: dhnsw.cpp  dhnsw.h  hnsw_rm.cpp  hnsw_rm.h  shnsw.cpp  shnsw.h
tests/: CMakeLists.txt  fgim_exp.cpp  merge_experiment.cpp  my_test.cpp  test_algorithm.cpp  test_dhnsw.cpp  test_index_construction.cpp  test_merging_graphs.cpp  test_merging_implemented_algorithms.cpp  test_shnsw.cpp
